--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -447,8 +447,7 @@
 <!--                                           checked-->
 <!--                                           {% endif %}>-->
 <!--                                </form>-->
-                                <input type="hidden" name="ticker_to_change" value="{{ i.ticker }}">
-                                <input class="mt-2" type="checkbox" onChange="change_enabled()"
+                                <input class="mt-2 enable-checkbox" id="enabled-{{i.ticker}}" data-ticker="{{i.ticker}}" type="checkbox"
                                        {%if i.enabled%}
                                        checked
                                        {% endif %}>
@@ -594,31 +593,31 @@
                                 <div class="form-group">
                                     <label class="form-label" for="txt_company_name">Name</label>
                                     <input required id="txt_company_name" name="txt_company_name" type="text" disabled
-                                           class="form-control">
+                                           class="form-control ticker-desc">
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="txt_company_description">Description</label>
-                                    <textarea required class="form-control" name="txt_company_description" disabled
+                                    <textarea required class="form-control ticker-desc" name="txt_company_description" disabled
                                               id="txt_company_description" rows="3"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="txt_exchange">Exchange</label>
-                                    <input required id="txt_exchange" name="txt_exchange" type="text" class="form-control"
+                                    <input required id="txt_exchange" name="txt_exchange" type="text" class="form-control ticker-desc"
                                            disabled>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="txt_industry">Sector</label>
-                                    <input required id="txt_sector" name="txt_sector" type="text" class="form-control"
+                                    <input required id="txt_sector" name="txt_sector" type="text" class="form-control ticker-desc"
                                            disabled>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="txt_industry">Industry</label>
-                                    <input required id="txt_industry" name="txt_industry" type="text" class="form-control"
+                                    <input required id="txt_industry" name="txt_industry" type="text" class="form-control ticker-desc"
                                            disabled>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="txt_logo">Logo URL</label>
-                                    <input required id="txt_logo" name="txt_logo" type="text" class="form-control" disabled>
+                                    <input required id="txt_logo" name="txt_logo" type="text" class="form-control ticker-desc" disabled>
                                 </div>
                             </div>
                         </div>
@@ -628,7 +627,7 @@
                     <button type="button" class="btn btn-secondary btn-modal-hide">Close
                     </button>
                     <input type="button" title="Validate to Submit" class="btn btn-primary" disabled id="btn_submit"
-                           value="Submit" onclick="update_candidate(remove_candidate)">
+                           value="Submit" onclick="update_candidate(remove_candidate, change_enabled)">
                 </div>
             </div>
         </form>
