--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -152,11 +152,9 @@
                     </table>
                 </div>
                 <div class="card-footer justify-content-between">
-                    {% if candidates|length > 5 %}
                     <span class="text-primary pr-1 pl-2 link font-weight-bold show_personal_modal">
-                        View All
+                        More
                     </span>
-                    {% endif %}
                     <button type="button" id="btnAddCandidate" class="btn btn-primary">
             Add Candidate
         </button>
