score change green text

--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -76,7 +76,7 @@
                                     <div class="text-small">{{i.company_name}}</div>
                                 </td>
                                 <td class="text-center">{{i.last_rank}}</td>
-                                <td class="text-center">{{i.change_val|round(2)}}</td>
+                                <td class="text-center text-success">{{i.change_val|round(2)}}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -380,7 +380,7 @@
                                 <div class="text-small">{{i.company_name}}</div>
                             </td>
                             <td class="text-center">{{i.last_rank}}</td>
-                            <td class="text-center">{{i.change_val}}</td>
+                            <td class="text-center text-success">{{i.change_val}}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
