--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -322,6 +322,37 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     overflow-y: scroll;
 }
 
+.today-page .ui.menu .item:after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 1px;
+    background: rgba(34,36,38,.1);
+}
+
+.today-page .search.item{
+    width: 70%;
+    box-shadow: 0 1px 2px 0 rgb(34 36 38 / 15%);
+    background: #fff !important;
+}
+
+.today-page  #search-users{
+    text-align: center;
+}
+
+.today-page .app-page-title {
+    margin: -30px 0px 14px !important;
+}
+
+.today-page .ui.menu{
+    justify-content: center !important;
+    background: none;
+    border: 0;
+    box-shadow: none;
+}
+
 .today-page .today-title{
     width: 75px;
     margin: -24px 30px 0 0 !important;
