--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -225,11 +225,9 @@
                     </table>
                 </div>
                 <div class="card-footer">
-                    {% if signals|length != 0%}
                     <span class="text-primary pr-1 pl-2 link font-weight-bold show_signals_modal">
                         More
                     </span>
-                    {%endif%}
                 </div>
             </div>
         </div>
@@ -237,16 +235,16 @@
 
     <div class="column">
         <div class="ui menu">
-            <div class="ui left search item">
+            <div class="ui search item">
                 <div class="ui transparent icon input">
-                    <input id="search-users" type="text" placeholder="Stock">
+                    <input id="search-users" type="text" placeholder="Search in all candidates">
                     <i class="search icon"></i>
                 </div>
             </div>
         </div>
         <input type="hidden" id="user_email" value="{{ user.email }}">
 
-        <div class="divider mt-0" style="margin-bottom: 30px;"></div>
+<!--        <div class="divider mt-0" style="margin-bottom: 30px;"></div>-->
         {% if admin_candidates|length != 0 %}
         <div class="admin-candidates" style="overflow-x: scroll;">
             <div class="page-title-subheading">
